--- a/packages/frontend/src/App.css
+++ b/packages/frontend/src/App.css
@@ -43,6 +43,7 @@
   font-size: 24px;
   color: rgb(12, 1, 1);
   font-weight: 800;
+  margin: 2rem;
 }
 
 label {
@@ -118,7 +119,7 @@ button {
 
 /* Button Styles */
 .button-11 {
-  margin-top: 15px;
+  margin-top: 30px;
   height: 35px;
   justify-content: center;
   align-items: center;
